--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "smartassign-root",
+  "name": "arrangist-root",
   "version": "1.0.0",
-  "description": "SmartAssign - Automated Time Management System",
+  "description": "Arrangist - Automated Time Management System",
   "scripts": {
     "install:all": "cd Backend && bun install && cd ../Frontend && bun install",
     "dev:backend": "cd Backend && bun run dev",
