--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -15,13 +15,13 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./Src",
+    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./Src/*"]
+      "@/*": ["./src/*"]
     },
     "types": ["bun-types"]
   },
-  "include": ["Src/**/*"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
